Volume doesn't render when PANORAMIC Camera is inside volume mesh #46055

Closed
opened 2015-09-09 10:11:18 +02:00 by Viktor Mukayev · 5 comments

System Information
Intel Core i7 CPU x990
Windows 7 x64
Nvidia Quadro 4000

Blender Version
Broken: (2.75 hash: 4ae1815) buildbot official

Short description of error
When Camera is inside Volume mesh, volume becomes invisible.
I've noticed that only PANORAMIC camera types are suffering, other cameras worked
I've linked the file with that wrong behaviour because I've tried to reproduce from scratch and failed. Works fine with default cube scene

Exact steps for others to reproduce the error
attached .blend file
just hit Render or Render preview in viewport.
Notice that at frames 33-38 when camera goes out of the Volume, it renders fine.bugreport_Volume_Tunnel.blend

**System Information** Intel Core i7 CPU x990 Windows 7 x64 Nvidia Quadro 4000 **Blender Version** Broken: (2.75 hash: 4ae1815) buildbot official **Short description of error** When Camera is inside Volume mesh, volume becomes invisible. I've noticed that only PANORAMIC camera types are suffering, other cameras worked I've linked the file with that wrong behaviour because I've tried to reproduce from scratch and failed. Works fine with default cube scene **Exact steps for others to reproduce the error** attached .blend file just hit Render or Render preview in viewport. Notice that at frames 33-38 when camera goes out of the Volume, it renders fine.[bugreport_Volume_Tunnel.blend](https://archive.blender.org/developer/F231669/bugreport_Volume_Tunnel.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Viktor Mukayev 2015-09-09 10:11:19 +02:00
Author

Added subscriber: @VictorMukayev

Added subscriber: @VictorMukayev

This issue was referenced by c87ee8da2c

This issue was referenced by c87ee8da2c3ff15777044a68f881ccb1bc03c37a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@e09c08b97b

This issue was referenced by blender/cycles@e09c08b97bcf6496ee05692462a93df9abc2ebc8
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46055
No description provided.