Fix T46055: Volume doesn't render when PANORAMIC Camera is inside volume mesh